Parsed the updateTransfers response. #43
